<package>
  <name>ndt_mcl</name>
  <version>1.0.30</version>
  <description>ndt_mcl</description>
  <maintainer email="jari.p.saarinen@gmail.com">Jari Saarinen</maintainer>
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <maintainer email="tomasz.kucner@oru.se">Tomasz Kucner</maintainer>
  
  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/ndt_mcl</url>
  <!-- <url type="bugtracker"></url> -->
  
  <author>Jari Saarinen</author>
  
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Dependencies needed to compile this package. -->
  <build_depend>ndt_visualisation</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>ndt_map</build_depend>
  <build_depend>ndt_registration</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>ndt_visualisation</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>ndt_map</run_depend>
  <run_depend>ndt_registration</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>ndt_visualisation</test_depend> -->
  <!-- <test_depend>rosbag</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>message_filters</test_depend> -->
  <!-- <test_depend>pcl</test_depend> -->
  <!-- <test_depend>ndt_map</test_depend> -->
  <!-- <test_depend>ndt_registration</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib" cflags="-I${prefix}/include"/>
</export>

</package>
